src/test/ui/issues/issue-10200.stderr
error[E0532]: expected tuple struct/variant, found function `foo`
  --> $DIR/issue-10200.rs:6:9
   |
LL |         foo(x)
   |         ^^^ help: a tuple struct with a similar name exists: `Foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0532`.
